2007-12-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* ediff-util.el (ediff-setup):
	* ediff-diff.el (ediff-prepare-error-list): Disable undo for
	ediff-error-buffer.

2007-12-03  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-initiate-display): Use `doc-view-mode-p'.
	(doc-view-current-overlay, doc-view-pending-cache-flush): Add doc
	string.

2007-12-03  Richard Stallman  <rms@gnu.org>

	* subr.el (declare-function): Moved from byte-run.el.

	* emacs-lisp/byte-run.el (declare-function): Moved to subr.el

	* window.el (recenter-top-bottom): Don't use `ecase'.

2007-12-02  Karl Fogel  <kfogel@red-bean.com>

	* saveplace.el (save-place-alist-to-file): Set
	coding-system-for-write once and refer to it throughout.
	Suggested by David Reitter <dreitter{_AT_}inf.ed.ac.uk>.

2007-12-02  Karl Fogel  <kfogel@red-bean.com>

	* saveplace.el (save-place-alist-to-file): Use `utf-8' coding
	system when writing, and set it in the first-line file variables.
	Suggested by David Reitter <dreitter{_AT_}inf.ed.ac.uk> and
	Juanma Barranquero.

2007-12-02  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-declare-function): Reverse
	branches of if statement.

	* emulation/viper-cmd.el (top-level): Don't require advice.
	Don't load viper-util, viper-keym, viper-mous, viper-macs,
	viper-ex when compiling.

	* emulation/viper-ex.el (top-level): Don't load viper-util,
	viper-keym when compiling.

	* emulation/viper-init.el (top-level): Move provide statement to end.

	* emulation/viper-keym.el (top-level): Don't load viper-util when
	compiling.  Move provide statement to end.

	* emulation/viper-macs.el (top-level): Don't load viper-util,
	viper-keym, viper-mous when compiling.

	* emulation/viper-mous.el (top-level): Don't load viper-util when
	compiling.

	* emulation/viper-util.el (top-level): Don't load viper-init when
	compiling.

	* emulation/viper.el (top-level): Don't require ring.
	Don't load viper-init, viper-cmd when compiling.
